--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=ICP-101xx Pressure Sensor Library
-version=1.0.0
+version=1.1.0
 author=Adrian Studer <gitpub@adrianstuder.com>
 maintainer=Adrian Studer <gitpub@adrianstuder.com>
 sentence=Arduino library for the TDK Invensense ICP-101xx family of high-resolution pressure sensors.
-paragraph=This library provides methods to read temperature and pressure. It was developed and tested with the ICP-10100, but should also work with other sensors of this family.
+paragraph=This library provides methods to read temperature and pressure. It was developed and tested with the ICP-10100 and ICP-10125 but should also work with other sensors of the family.
 category=Sensors
 url=https://github.com/astuder/icp-101xx
 architectures=*
